--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,15 +1,34 @@
 header {
     background-color: black;
     color: white;
-    font-size: 18px;
+    padding: 10px 0;
 
     > div {
         display: flex;
         align-items: center;
 
+        @media (max-width: 640px) {
+            display: flex;
+            justify-content: center;
+        }
+
+        svg {
+            cursor: pointer;
+            font-size: 20px;
+        }
+
         img {
             object-fit: contain;
-            width: 125px;
+            width: 138px;
+
+            @media (max-width: 640px) {
+                width: 215px;
+                margin: 0 auto;
+            }
+
+            @media (max-width: 460px) {
+                width: 170px;
+            }
         }
 
         > div {
@@ -19,19 +38,50 @@ header {
                 display: flex;
                 list-style: none;
                 margin: auto;
-                padding: 14px;
-            }
-
-            ul:first-of-type {
-
-                li:first-of-type {
-                    font-weight: bold;
-                }
+                padding: 15px;
 
                 li {
                     cursor: pointer;
                     width: fit-content;
                     margin: 0 10px;
+                    white-space: nowrap;
+                    font-size: 16px;
+                    transition: 0.2s;
+                    position: relative;
+
+                    &:hover {
+                        color: #007aff;
+
+                        &::after {
+                            width: 100%;
+                        }
+                    }
+
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        background-color: #007aff;
+                        bottom: -4px;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        height: 1px;
+                        width: 0;
+                        transition: 0.3s;
+                    }
+                }
+                
+                &:first-of-type {
+
+                    li:first-of-type {
+                        font-weight: bold;
+                    }
+                }
+
+                &:last-of-type {
+
+                    li {
+                        font-size: 14px;
+                    }
                 }
             }
         }
